--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "daisyui": "^2.51.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
